--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/*Large Background Image*/
+
 html {
   background-color: #222;
   height: 100%;
@@ -104,27 +104,32 @@ html {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 700;
   padding: 2em;
   color: #fff;
+  font-size: 1.25em;
   height: 100%;
 }
 
 .wrapper {
+  /*add display:flex and set justify-content to space-between*/
+  font-weight: 500;
   display: flex;
-  flex-flow: row wrap;
+/*  flex-flow: row wrap; */
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
 }
 
 .div-1, .div-2, .div-3 {
+  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.25em;
-  /* width: 30%; */
+  font-size: 1.6em;
+/*  background-color: #f16059; */
+/*  width: 30%; */
+/*  height: 300px; */
   height: auto;
 }
 
@@ -132,9 +137,6 @@ body {
   font-family: 'Lora', sans-serif;
   font-size: 1.3em;
 }
-
-
-
 
 /* ==========================================================================
    Helper classes
@@ -215,17 +217,6 @@ body {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
-@media all and (min-width: 1200px) {
-    .div-1, .div-2, .div-3 {
-      flex-basis: 30%;
-    }
-
-    .div-1, .div-2 {
-      border-right: 1px solid #555;
-      padding-right: 30px;
-    }
-}
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
